[package]
authors = ["David Peter <mail@david-peter.de>"]
description = "A graphical tool to visualize binary data"
homepage = "https://github.com/sharkdp/binocle"
license = "MIT/Apache-2.0"
name = "binocle"
readme = "README.md"
repository = "https://github.com/sharkdp/binocle"
version = "0.2.0"
edition = "2021"
rust-version = "1.56"

[features]
optimize = ["log/release_max_level_warn"]
trace = [] # Enables tracing with puffin.
default = ["optimize"]

[dependencies]
clap = "3.0.0-beta.5"
colorgrad = "0.5"
egui = "0.14"
egui_wgpu_backend = "0.13"
egui_winit_platform = { version = "0.10" }
env_logger = "0.9"
log = "0.4"
pixels = "0.7"
winit = "0.25"
winit_input_helper = "0.10"
anyhow = "1.0"
humansize = "1.1"
memmap2 = "0.5.0"
puffin = "0.10.1"
puffin_http = "0.7.3"
