[package]
authors = ["David Peter <mail@david-peter.de>"]
description = "A graphical tool to visualize binary data"
homepage = "https://github.com/sharkdp/binocle"
license = "MIT/Apache-2.0"
name = "binocle"
readme = "README.md"
repository = "https://github.com/sharkdp/binocle"
version = "0.3.1"
edition = "2021"
rust-version = "1.66"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
clap = { version = "3.0", features = ["derive"] }
colorgrad = "0.5"
egui = "0.22"
egui-wgpu = "0.22.0"
egui-winit = { version = "0.22", default-features = false }
env_logger = "0.9"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
anyhow = "1.0"
humansize = "1.1"
memmap2 = "0.5.0"
proc-macro2 = "1.0.69"
